--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@t3-oss/env-nextjs": "^0.13.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
