--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@auth/drizzle-adapter": "^1.9.1",
     "@aws-sdk/client-s3": "^3.820.0",
     "@aws-sdk/s3-request-presigner": "^3.820.0",
+    "@knocklabs/node": "^1.4.1",
+    "@knocklabs/react": "^0.7.12",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.6",
     "class-variance-authority": "^0.7.1",
