--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/s3-request-presigner": "^3.820.0",
     "@knocklabs/node": "^1.4.1",
     "@knocklabs/react": "^0.7.12",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.6",
     "class-variance-authority": "^0.7.1",
@@ -27,6 +28,7 @@
     "next-auth": "^5.0.0-beta.28",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.36"
